--- a/site/www/package.json
+++ b/site/www/package.json
@@ -8,10 +8,46 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.4",
-		"svelte": "^4.0.5",
-		"vite": "^4.4.2"
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/fira-mono": "^5.0.8",
+		"@mapbox/rehype-prism": "^0.9.0",
+		"@neoconfetti/svelte": "^2.2.1",
+		"@tailwindcss/typography": "^0.5.10",
+		"@vcarl/remark-headings": "^0.1.0",
+		"autoprefixer": "^10.4.16",
+		"clsx": "^2.1.0",
+		"cssnano": "^6.0.3",
+		"date-fns": "^3.2.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"front-matter": "^4.0.2",
+		"heroicons-svelte": "^2.0.0",
+		"mdsvex": "^0.11.0",
+		"mdsvex-relative-images": "^1.0.3",
+		"node-html-parser": "^6.1.12",
+		"postcss": "^8.4.33",
+		"postcss-load-config": "^5.0.2",
+		"prettier": "^3.2.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"reading-time": "^1.5.0",
+		"reading-time-estimator": "^1.9.4",
+		"rehype": "^13.0.1",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1",
+		"remark-reading-time": "^2.0.1",
+		"svelte-collapse": "^0.1.2",
+		"svelte-preprocess": "^5.1.3",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3",
+		"unist-util-visit": "^5.0.0"
+	}
 }
