--- a/site/www/package.json
+++ b/site/www/package.json
@@ -8,7 +8,6 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
@@ -19,6 +18,7 @@
 		"@fontsource/fira-mono": "^5.0.8",
 		"@mapbox/rehype-prism": "^0.9.0",
 		"@neoconfetti/svelte": "^2.2.1",
+		"@sveltejs/adapter-vercel": "^4.0.4",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vcarl/remark-headings": "^0.1.0",
 		"autoprefixer": "^10.4.16",
