--- a/site/www/package.json
+++ b/site/www/package.json
@@ -16,7 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^4.0.4",
+		"@sveltejs/adapter-auto": "^3.1.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vcarl/remark-headings": "^0.1.0",
 		"autoprefixer": "^10.4.16",
