--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -31,6 +31,7 @@
 		"rehype-slug": "^6.0.0",
 		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3",
 		"unist-util-visit": "^5.0.0"
 	}
 }
