--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,39 +1,40 @@
 {
 	"name": "zsr",
 	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.0.0",
+		"@sveltejs/adapter-vercel": "^5.1.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.2.2",
 		"@vercel/speed-insights": "^1.0.10",
-		"autoprefixer": "^10.4.16",
-		"date-fns": "^3.2.0",
+		"autoprefixer": "^10.4.18",
+		"date-fns": "^3.3.1",
 		"mdsvex": "^0.11.0",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^6.1.12",
-		"postcss": "^8.4.33",
-		"postcss-load-config": "^5.0.2",
+		"postcss": "^8.4.35",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
-		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5.3.3",
 		"unist-util-visit": "^5.0.0"
 	}
 }
