--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -5,17 +5,12 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
@@ -30,10 +25,10 @@
 		"mdsvex": "^0.11.0",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^6.1.12",
-		"postcss": "^8.4.35",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
+		"svelte-preprocess": "^5.1.3",
 		"tailwindcss": "^3.4.1",
 		"unist-util-visit": "^5.0.0"
 	}
