--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -10,7 +10,10 @@
 	"devDependencies": {
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.18",
+		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
@@ -20,7 +23,6 @@
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.2.2",
 		"@vercel/speed-insights": "^1.0.10",
-		"autoprefixer": "^10.4.18",
 		"date-fns": "^3.3.1",
 		"mdsvex": "^0.11.0",
 		"mdsvex-relative-images": "^1.0.3",
@@ -29,7 +31,6 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"svelte-preprocess": "^5.1.3",
-		"tailwindcss": "^3.4.1",
 		"unist-util-visit": "^5.0.0"
 	}
 }
