add text to speech

--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -19,6 +19,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.1.0",
+		"@sveltia/cms": "^0.36.5",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.2.2",
