--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,37 +1,36 @@
 {
 	"name": "zsr",
-	"version": "1.0.0",
-	"private": true,
+	"version": "1.0.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@fontsource/fira-mono": "^5.0.0",
+		"@neoconfetti/svelte": "^2.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"autoprefixer": "^10.4.18",
-		"postcss": "^8.4.35",
 		"svelte": "^4.2.7",
-		"tailwindcss": "^3.4.1",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.1.0",
-		"@sveltia/cms": "^0.36.5",
-		"@tailwindcss/typography": "^0.5.10",
+		"@sveltejs/adapter-vercel": "^5.4.5",
+		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
-		"@vercel/analytics": "^1.2.2",
-		"@vercel/speed-insights": "^1.0.10",
-		"date-fns": "^3.3.1",
-		"mdsvex": "^0.11.0",
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.12",
+		"autoprefixer": "^10.4.20",
+		"date-fns": "^4.1.0",
+		"mdsvex": "^0.12.3",
 		"mdsvex-relative-images": "^1.0.3",
-		"node-html-parser": "^6.1.12",
+		"node-html-parser": "^6.1.13",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
-		"svelte-preprocess": "^5.1.3",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^3.4.13",
 		"unist-util-visit": "^5.0.0"
 	}
 }
