--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -16,7 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.4.5",
+		"@sveltejs/adapter-auto": "^3.3.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.3.1",
