--- a/site/htdocs/static/admin/config.yml
+++ b/site/htdocs/static/admin/config.yml
@@ -1,18 +1,25 @@
 backend:
-  [name: github]
-  repo: NVCDevelopmentTeam/Zepp-OS-ScreenReader/site/htdocs
+  name: github
+  repo: NVCDevelopmentTeam/Zepp-OS-ScreenReader
   branch: main
+  site_domain: zsr.vercel.app
   base_url: https://zsr.net
+  auth_endpoint: oauth
 
-media_folder: "static/uploads"
-public_folder: "/uploads"
+media_folder: "src/lib/images"
+public_folder: "/images"
 
 collections:
   - name: "posts"
     label: "Posts"
     folder: "src/lib/posts"
-    create: true
-    slug: "{{slug}}"
-    fields:
+    create: true # Allow users to create new documents in this collection
+    preview_path_date_field: "date"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: "Source", name: "source", widget: "string" }
+      - { label: "URL", name: "url", widget: "string" }
+      - { label: "Featured Image", name: "img", widget: "image" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
