--- a/site/htdocs/static/admin/config.yml
+++ b/site/htdocs/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: NVCDevelopmentTeam/Zepp-OS-ScreenReader
   branch: main
   site_domain: zsr.vercel.app
-  base_url: https://zsr.net
+  base_url: https://zsr.vercel.app
   auth_endpoint: oauth
 
 media_folder: "src/lib/images"
