--- a/site/htdocs/static/admin/config.yml
+++ b/site/htdocs/static/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: main
   site_domain: zsr.vercel.app
   base_url: https://zsr.vercel.app
+  auth_endpoint: oauth
 
 media_folder: "site/htdocs/src/lib/images"
 public_folder: "/src/lib/images"
