--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zsr",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -19,6 +19,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltia/cms": "^0.46.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.3.1",
