--- a/site/htdocs/.gitignore
+++ b/site/htdocs/.gitignore
@@ -1,21 +1,3 @@
-node_modules
-
-# Output
-.output
-.vercel
-/.svelte-kit
-/build
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
-.env
-.env.*
-!.env.example
-!.env.test
-
-# Vite
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+node_modules/
+.dev.vars
+.wrangler/
