--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,31 +1,39 @@
 {
-  "name": "sveltia-cms-auth",
-  "version": "0.1.0",
-  "license": "MIT",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "start": "wrangler dev",
-    "deploy": "wrangler deploy",
-    "check": "pnpm run '/^check:.*/'",
-    "check:audit": "pnpm audit",
-    "check:cspell": "cspell --no-progress",
-    "check:prettier": "prettier --check .",
-    "check:eslint": "eslint ."
-  },
-  "devDependencies": {
-    "@types/node": "^22.9.0",
-    "cspell": "^8.16.0",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^50.5.0",
-    "prettier": "^3.3.3",
-    "wrangler": "3.87.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "cookie@<0.7.0": ">=0.7.0"
-    }
-  }
+	"name": "zsr",
+	"version": "1.0.2",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@auth/core": "^0.37.4",
+		"@auth/sveltekit": "^1.7.4",
+		"@neoconfetti/svelte": "^2.2.1",
+		"@sveltejs/kit": "^2.8.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.1",
+		"svelte": "^5.2.7",
+		"vite": "^5.4.11"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.4.7",
+		"@sveltia/cms": "^0.46.5",
+		"@tailwindcss/typography": "^0.5.15",
+		"@vcarl/remark-headings": "^0.1.0",
+		"@vercel/analytics": "^1.4.1",
+		"@vercel/speed-insights": "^1.1.0",
+		"autoprefixer": "^10.4.20",
+		"date-fns": "^4.1.0",
+		"dotenv": "^16.4.5",
+		"mdsvex": "^0.12.3",
+		"mdsvex-relative-images": "^1.0.3",
+		"node-html-parser": "^6.1.13",
+		"reading-time": "^1.5.0",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^3.4.15",
+		"unist-util-visit": "^5.0.0"
+	}
 }
