--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,31 +1,28 @@
 {
-	"name": "zsr",
-	"version": "1.0.2",
+	"name": "Zsr",
+	"version": "1.0.4",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@auth/core": "^0.37.4",
-		"@auth/sveltekit": "^1.7.4",
-		"@neoconfetti/svelte": "^2.2.1",
-		"@sveltejs/kit": "^2.8.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.1",
-		"svelte": "^5.2.7",
-		"vite": "^5.4.11"
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"svelte": "^5.0.0",
+		"vite": "^5.0.3"
 	},
-	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.4.7",
-		"@sveltia/cms": "^0.46.5",
+		"@auth/sveltekit": "^1.7.4",
+		"@sveltejs/adapter-vercel": "^5.4.8",
+		"@sveltia/cms": "^0.47.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
 		"autoprefixer": "^10.4.20",
 		"date-fns": "^4.1.0",
-		"dotenv": "^16.4.5",
 		"mdsvex": "^0.12.3",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^6.1.13",
