--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -14,6 +14,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@auth/core": "^0.37.4",
 		"@auth/sveltekit": "^1.7.4",
 		"@sveltejs/adapter-vercel": "^5.4.8",
 		"@sveltia/cms": "^0.47.1",
