--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -16,7 +16,7 @@
 	"dependencies": {
 		"@auth/core": "^0.37.4",
 		"@auth/sveltekit": "^1.7.4",
-		"@sveltejs/adapter-vercel": "^5.4.8",
+		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltia/cms": "^0.47.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
