--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -24,6 +24,7 @@
 		"@vercel/speed-insights": "^1.1.0",
 		"autoprefixer": "^10.4.20",
 		"date-fns": "^4.1.0",
+		"js-yaml": "^4.1.0",
 		"mdsvex": "^0.12.3",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^6.1.13",
