--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -8,20 +8,21 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"svelte": "^5.0.0",
-		"vite": "^5.0.3"
+		"@sveltejs/kit": "^2.12.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"svelte": "^5.14.4",
+		"vite": "^6.0.4"
 	},
 	"dependencies": {
 		"@auth/core": "^0.37.4",
 		"@auth/sveltekit": "^1.7.4",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltia/cms": "^0.47.1",
+		"@sveltia/cms": "^0.49.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
+		"astro-decap-cms-oauth": "^0.5.1",
 		"autoprefixer": "^10.4.20",
 		"date-fns": "^4.1.0",
 		"js-yaml": "^4.1.0",
@@ -32,7 +33,7 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"svelte-preprocess": "^6.0.3",
-		"tailwindcss": "^3.4.15",
+		"tailwindcss": "^3.4.17",
 		"unist-util-visit": "^5.0.0"
 	}
 }
