--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -14,7 +14,7 @@
 		"vite": "^6.0.6"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltia/cms": "^0.50.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@vcarl/remark-headings": "^0.1.0",
