--- a/site/htdocs/static/sveltiaconfig.json
+++ b/site/htdocs/static/sveltiaconfig.json
@@ -11,9 +11,9 @@
   "public_folder": "/src/lib/images",
   "adminDisabled": false,
   "adminRoute": "/admin",
-  "oauthDisabled": true,
+  "oauthDisabled": false,
   "oauthLoginRoute": "/oauth",
-  "oauthCallbackRoute": "/callback",
+  "oauthCallbackRoute": "/oauth/callback",
   "collections": [
     {
       "name": "posts",
