--- a/site/htdocs/static/sveltiaconfig.json
+++ b/site/htdocs/static/sveltiaconfig.json
@@ -13,7 +13,7 @@
   "adminRoute": "/admin",
   "oauthDisabled": false,
   "oauthLoginRoute": "/oauth",
-  "oauthCallbackRoute": "/callback",
+  "oauthCallbackRoute": "/oauth/callback",
   "collections": [
     {
       "name": "posts",
