--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -8,29 +8,33 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"svelte": "^5.19.0",
-		"vite": "^6.0.7"
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.1",
+		"svelte": "^5.19.3",
+		"tailwindcss": "^4.0.0",
+		"vite": "^6.0.11"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.5.3",
-		"@sveltia/cms": "^0.54.0",
+		"@sveltia/cms": "^0.55.0",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.0.0",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
 		"astro-sveltia-cms": "^0.1.0",
-		"autoprefixer": "^10.4.20",
 		"date-fns": "^4.1.0",
 		"mdsvex": "^0.12.3",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^7.0.1",
+		"postcss-load-config": "^6.0.1",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"svelte-preprocess": "^6.0.3",
-		"tailwindcss": "^3.4.17",
 		"unist-util-visit": "^5.0.0"
 	}
 }
