--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,36 +1,40 @@
 {
-	"name": "Zsr",
-	"version": "1.0.4",
+	"name": "zsr",
+	"private": true,
+	"version": "1.0.5",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.17.2",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"autoprefixer": "^10.4.20",
-		"postcss": "^8.5.2",
-		"svelte": "^5.20.1",
-		"tailwindcss": "^4.0.6",
-		"vite": "^6.1.0"
+		"@fontsource/fira-mono": "^5.0.0",
+		"@neoconfetti/svelte": "^2.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"svelte": "^5.0.0",
+		"vite": "^6.0.0"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.6.2",
-		"@sveltia/cms": "^0.57.0",
-		"@tailwindcss/postcss": "^4.0.6",
-		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.0.6",
+		"@sveltia/cms": "^0.58.0",
+		"@tailwindcss/postcss": "^4.0.7",
 		"@vcarl/remark-headings": "^0.1.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"astro-sveltia-cms": "^0.1.0",
+		"autoprefixer": "^10.4.20",
 		"date-fns": "^4.1.0",
 		"mdsvex": "^0.12.3",
 		"mdsvex-relative-images": "^1.0.3",
 		"node-html-parser": "^7.0.1",
-		"postcss-load-config": "^6.0.1",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
