--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "zsr",
+	"description": "Zepp OS screen reader official website",
 	"private": true,
 	"version": "1.0.5",
 	"type": "module",
@@ -10,9 +11,9 @@
 		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.17.3",
+		"@sveltejs/kit": "^2.18.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"svelte": "^5.20.5",
+		"svelte": "^5.22.2",
 		"vite": "^6.2.0"
 	},
 	"pnpm": {
