--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
   "license": "ISC",
   "devDependencies": {
     "@zeppos/device-types": "^3.0.0"
+  },
+  "dependencies": {
+    "@sveltejs/kit": "^2.18.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "accessibility": "^6.0.7",
+    "espeak-ng": "^1.0.2",
+    "express": "^4.21.2",
+    "svelte": "^5.22.5",
+    "use-sound": "^5.0.0",
+    "vite": "^6.2.0"
   }
 }
