--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -22,7 +22,7 @@
 		]
 	},
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.6.3",
+		"@sveltejs/adapter-cloudflare": "^5.0.3",
 		"@sveltia/cms": "^0.60.3",
 		"@tailwindcss/postcss": "^4.0.9",
 		"@vcarl/remark-headings": "^0.1.0",
