--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "private": true,
+  "type": "module",
   "scripts": {
+    "dev": "zeus dev",
+    "build": "zeus build",
+    "preview": "zeus preview",
+    "prepare": "svelte-kit sync || echo ''",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "NVCDevelopmentTeam",
   "license": "ISC",
   "devDependencies": {
-    "@zeppos/device-types": "^3.0.0"
     "@sveltejs/kit": "^2.18.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@zeppos/device-types": "^3.0.0",
     "svelte": "^5.22.5",
     "vite": "^6.2.0"
   },
@@ -22,6 +28,7 @@
     "espeak-ng": "^1.0.2",
     "express": "^4.21.2",
     "node-tesseract-ocr": "^2.2.1",
-    "use-sound": "^5.0.0",
+    "tailwindcss": "^4.0.12",
+    "use-sound": "^5.0.0"
   }
 }
