--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -27,6 +27,7 @@
 		"mdsvex": "^0.12.6",
 		"mdsvex-relative-images": "^2.0.0",
 		"node-html-parser": "^7.0.1",
+		"postcss-load-config": "^6.0.1",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
