--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 		"preview": "zeus preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "NVC DevelopmentTeam",
   "license": "ISC",
   "devDependencies": {
-    "@zeppos/device-types": "^2.0.0"
+    "@zeppos/device-types": "^3.0.0"
   }
 }
